fixed failed to fetch error
